fix: remove unsupported build config from wrangler.toml for Cloudflare Pages

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "golden-keyword-finder",
+  "name": "0_nkey",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.16",
