--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
