--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,3 +3,17 @@ compatibility_date = "2024-01-01"
 
 # Cloudflare Pages 설정
 pages_build_output_dir = "out"
+
+# D1 데이터베이스 설정
+[[d1_databases]]
+binding = "DB"
+database_name = "0_nkey_db"
+database_id = "your-database-id-here"
+
+# 환경 변수
+[vars]
+ADMIN_KEY = "dev-key-2024"
+
+# 크론 트리거 설정 (Workers용)
+[[triggers]]
+crons = ["0 2 * * *"]  # 매일 02:00 UTC에 실행
