--- a/wrangler-api.toml
+++ b/wrangler-api.toml
@@ -1,8 +1,6 @@
-name = "0_nkey"
+name = "0_nkey-api"
 compatibility_date = "2024-01-01"
-
-# Cloudflare Pages 설정
-pages_build_output_dir = "out"
+main = "functions/api/collect.ts"
 
 # D1 데이터베이스 설정
 [[d1_databases]]
