--- a/wrangler-workers.toml
+++ b/wrangler-workers.toml
@@ -1,8 +1,6 @@
-name = "0_nkey"
+name = "0_nkey-workers"
 compatibility_date = "2024-01-01"
-
-# Cloudflare Pages 설정
-pages_build_output_dir = "out"
+main = "functions/cron.ts"
 
 # D1 데이터베이스 설정
 [[d1_databases]]
@@ -13,3 +11,7 @@ database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
 # 환경 변수
 [vars]
 ADMIN_KEY = "dev-key-2024"
+
+# 크론 트리거 설정
+[[triggers]]
+crons = ["0 2 * * *"]  # 매일 02:00 UTC에 실행
