--- a/wrangler-api.toml
+++ b/wrangler-api.toml
@@ -11,3 +11,5 @@ database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
 # 환경 변수
 [vars]
 ADMIN_KEY = "dev-key-2024"
+NAVER_CLIENT_ID = "your-naver-client-id"
+NAVER_CLIENT_SECRET = "your-naver-client-secret"
