--- a/wrangler-workers.toml
+++ b/wrangler-workers.toml
@@ -11,6 +11,8 @@ database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
 # 환경 변수
 [vars]
 ADMIN_KEY = "dev-key-2024"
+NAVER_CLIENT_ID = "your-naver-client-id"
+NAVER_CLIENT_SECRET = "your-naver-client-secret"
 
 # 크론 트리거 설정
 [[triggers]]
