--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ compatibility_date = "2024-01-01"
 
 # Cloudflare Pages 설정
 pages_build_output_dir = "out"
+build_command = "npm run build"
 
 # D1 데이터베이스 설정
 [[d1_databases]]
