fix: wrangler.toml ?섍꼍蹂???대쫫 ?듭씪
- ADMIN_KEY ??NAVER_ADMIN_KEY濡?蹂寃?- Functions? wrangler.toml ?섍꼍蹂???대쫫 ?쇱튂

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,4 +12,4 @@ database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
 
 # 환경 변수
 [vars]
-ADMIN_KEY = "dev-key-2024"
+NAVER_ADMIN_KEY = "dev-key-2024"
