fix: wrangler.toml?먯꽌 ?섍꼍蹂???쒓굅
- Cloudflare Pages ??쒕낫?쒖뿉?쒕쭔 ?섍꼍蹂??愿由?- NAVER_ADMIN_KEY 異⑸룎 ?먮윭 ?닿껐

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,6 +10,4 @@ binding = "DB"
 database_name = "0_nkey_db"
 database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
 
-# 환경 변수
-[vars]
-NAVER_ADMIN_KEY = "dev-key-2024"
+# 환경 변수는 Cloudflare Pages 대시보드에서 관리
