--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:workers": "wrangler deploy --config wrangler-workers.toml",
+    "deploy:pages": "wrangler pages deploy out"
   },
   "dependencies": {
     "next": "^14.0.0",
