--- a/wrangler-workers.toml
+++ b/wrangler-workers.toml
@@ -1,6 +1,14 @@
-name = "0_nkey-workers"
+name = "0_nkey-api"
 compatibility_date = "2024-01-01"
-main = "functions/cron.ts"
+main = "workers/collect.ts"
+
+# 관찰 가능성 설정 (로그 활성화)
+[observability]
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+invocation_logs = true
+persist = true
 
 # D1 데이터베이스 설정
 [[d1_databases]]
@@ -8,51 +16,22 @@ binding = "DB"
 database_name = "0_nkey_db"
 database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
 
-# 환경 변수
+# 환경 변수 (Workers용)
 [vars]
 ADMIN_KEY = "dev-key-2024"
-NAVER_CLIENT_ID = "your-naver-client-id"
-NAVER_CLIENT_SECRET = "your-naver-client-secret"
 
-# 네이버 검색광고 API 키 (5개)
-NAVER_API_KEY_1 = "your-first-api-key"
-NAVER_API_SECRET_1 = "your-first-api-secret"
-NAVER_CUSTOMER_ID_1 = "your-first-customer-id"
-NAVER_API_KEY_2 = "your-second-api-key"
-NAVER_API_SECRET_2 = "your-second-api-secret"
-NAVER_CUSTOMER_ID_2 = "your-second-customer-id"
-NAVER_API_KEY_3 = "your-third-api-key"
-NAVER_API_SECRET_3 = "your-third-api-secret"
-NAVER_CUSTOMER_ID_3 = "your-third-customer-id"
-NAVER_API_KEY_4 = "your-fourth-api-key"
-NAVER_API_SECRET_4 = "your-fourth-api-secret"
-NAVER_CUSTOMER_ID_4 = "your-fourth-customer-id"
-NAVER_API_KEY_5 = "your-fifth-api-key"
-NAVER_API_SECRET_5 = "your-fifth-api-secret"
-NAVER_CUSTOMER_ID_5 = "your-fifth-customer-id"
+# 비밀 환경 변수 (Workers용)
+[[secrets]]
+name = "NAVER_API_KEY_1"
 
-# 네이버 오픈API 키 (10개)
-NAVER_OPENAPI_KEY_1 = "your-first-openapi-key"
-NAVER_OPENAPI_SECRET_1 = "your-first-openapi-secret"
-NAVER_OPENAPI_KEY_2 = "your-second-openapi-key"
-NAVER_OPENAPI_SECRET_2 = "your-second-openapi-secret"
-NAVER_OPENAPI_KEY_3 = "your-third-openapi-key"
-NAVER_OPENAPI_SECRET_3 = "your-third-openapi-secret"
-NAVER_OPENAPI_KEY_4 = "your-fourth-openapi-key"
-NAVER_OPENAPI_SECRET_4 = "your-fourth-openapi-secret"
-NAVER_OPENAPI_KEY_5 = "your-fifth-openapi-key"
-NAVER_OPENAPI_SECRET_5 = "your-fifth-openapi-secret"
-NAVER_OPENAPI_KEY_6 = "your-sixth-openapi-key"
-NAVER_OPENAPI_SECRET_6 = "your-sixth-openapi-secret"
-NAVER_OPENAPI_KEY_7 = "your-seventh-openapi-key"
-NAVER_OPENAPI_SECRET_7 = "your-seventh-openapi-secret"
-NAVER_OPENAPI_KEY_8 = "your-eighth-openapi-key"
-NAVER_OPENAPI_SECRET_8 = "your-eighth-openapi-secret"
-NAVER_OPENAPI_KEY_9 = "your-ninth-openapi-key"
-NAVER_OPENAPI_SECRET_9 = "your-ninth-openapi-secret"
-NAVER_OPENAPI_KEY_10 = "your-tenth-openapi-key"
-NAVER_OPENAPI_SECRET_10 = "your-tenth-openapi-secret"
+[[secrets]]
+name = "NAVER_API_SECRET_1"
 
-# 크론 트리거 설정
-[[triggers]]
-crons = ["0 2 * * *"]  # 매일 02:00 UTC에 실행
+[[secrets]]
+name = "NAVER_CUSTOMER_ID_1"
+
+[[secrets]]
+name = "NAVER_OPENAPI_KEY_1"
+
+[[secrets]]
+name = "NAVER_OPENAPI_SECRET_1"
