--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,14 @@ compatibility_date = "2024-01-01"
 # Cloudflare Pages 설정
 pages_build_output_dir = "out"
 
+# 관찰 가능성 설정 (로그 활성화)
+[observability]
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+invocation_logs = true
+persist = true
+
 # D1 데이터베이스 설정
 [[d1_databases]]
 binding = "DB"
