feat: 100만개 키워드 데이터 처리 최적화
- 데이터베이스 인덱스 최적화 (복합 인덱스, 커버링 인덱스 추가)
- 프론트엔드 메모이제이션 (React.memo, useCallback 적용)
- 메모이제이션된 KeywordRow 컴포넌트로 렌더링 성능 향상
- API 쿼리 최적화 (병렬 처리, 효율적인 JOIN)
- 응답 캐싱 및 압축 적용 (5분 캐시, gzip)
- 무한 스크롤 방식으로 메모리 사용량 최적화
- Cloudflare Pages 캐시 설정 추가

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,4 +10,14 @@ binding = "DB"
 database_name = "0_nkey_db"
 database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
 
+# 캐시 설정 (100만개 데이터 최적화)
+[build]
+command = "npm run build"
+
+# Pages Functions 캐시 설정
+[[pages_build_config]]
+# API 엔드포인트별 캐시 설정
+cache = true
+cache_ttl = 300  # 5분 캐시
+
 # 환경 변수는 Cloudflare Pages 대시보드에서 관리
