--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "0_nkey",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.17.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
