--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,11 @@
+# Cloudflare Workers/Pages 설정
 name = "0_nkey"
 compatibility_date = "2024-01-01"
-
-# Cloudflare Pages 설정
-pages_build_output_dir = "out"
 
 # D1 데이터베이스 설정
 [[d1_databases]]
 binding = "DB"
 database_name = "0_nkey_db"
 database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
-
-# 캐시 설정 (100만개 데이터 최적화)
-[build]
-command = "npm run build"
-
-# Pages Functions 캐시 설정
-[[pages_build_config]]
-# API 엔드포인트별 캐시 설정
-cache = true
-cache_ttl = 300  # 5분 캐시
 
 # 환경 변수는 Cloudflare Pages 대시보드에서 관리
