--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,12 @@
 name = "0_nkey"
 compatibility_date = "2024-01-01"
 
+# Pages Functions 설정 - Next.js와 함께 사용
+[[pages_build_config]]
+build_command = "npm run build"
+destination_dir = ".next"
+root_dir = "."
+
 # D1 데이터베이스 설정
 [[d1_databases]]
 binding = "DB"
