--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,10 @@
 name = "0_nkey"
 compatibility_date = "2024-01-01"
 
+# Pages Functions 설정
+pages_build_output_dir = ".next"
+functions = "functions"
+
 # D1 데이터베이스 설정
 [[d1_databases]]
 binding = "DB"
