--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx @cloudflare/next-on-pages@1",
     "start": "next start",
     "lint": "next lint",
     "deploy:workers": "wrangler deploy --config wrangler-workers.toml",
-    "deploy:pages": "wrangler pages deploy out"
+    "deploy:pages": "wrangler pages deploy .next"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "next": "^15.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
