--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=18.17.0",
+    "node": "^18.18.0 || ^19.8.0 || >= 20.0.0",
     "npm": ">=8.0.0"
   },
   "scripts": {
