--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "^18.18.0 || ^19.8.0 || >= 20.0.0",
+    "node": ">=18.17.0",
     "npm": ">=8.0.0"
   },
   "scripts": {
@@ -15,9 +15,9 @@
     "deploy:pages": "wrangler pages deploy out"
   },
   "dependencies": {
-    "next": "^15.5.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "next": "^14.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
