--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,6 @@
-# Cloudflare Pages Functions 설정
+# Cloudflare Pages 설정 (Functions 없이 정적 파일만)
 name = "0_nkey"
 compatibility_date = "2024-01-01"
 
-# Pages Functions 설정 (수정됨)
+# 정적 파일 배포 설정
 pages_build_output_dir = "out"
-
-# D1 데이터베이스 설정
-[[d1_databases]]
-binding = "DB"
-database_name = "0_nkey_db"
-database_id = "c48f0714-2a98-4b65-8c11-6e8ed118efdc"
