--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,15 +3,16 @@ name: Deploy to Cloudflare Pages
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch: # 수동 실행 가능
 
 jobs:
-  deploy:
+  # 빌드 및 테스트
+  build:
     runs-on: ubuntu-latest
-
+    name: Build and Test
+    
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v4
 
     - name: Setup Node.js
@@ -23,10 +24,61 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Build
+    - name: Run linter
+      run: npm run lint || true # 린터 경고는 무시
+
+    - name: Build Next.js
       run: npm run build
+      env:
+        NODE_ENV: production
+
+    - name: Check build output
+      run: |
+        if [ ! -d "out" ]; then
+          echo "❌ Build output directory 'out' not found!"
+          exit 1
+        fi
+        echo "✅ Build output directory found"
+        ls -la out | head -20
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-output
+        path: out
+        retention-days: 1
+
+  # Cloudflare Pages 배포
+  deploy:
+    runs-on: ubuntu-latest
+    name: Deploy to Cloudflare Pages
+    needs: build
+    if: github.event_name != 'pull_request' # PR에서는 배포하지 않음
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: build-output
+        path: out
+
+    - name: Verify Cloudflare secrets
+      run: |
+        if [ -z "${{ secrets.CLOUDFLARE_API_TOKEN }}" ]; then
+          echo "❌ CLOUDFLARE_API_TOKEN secret is not set"
+          exit 1
+        fi
+        if [ -z "${{ secrets.CLOUDFLARE_ACCOUNT_ID }}" ]; then
+          echo "❌ CLOUDFLARE_ACCOUNT_ID secret is not set"
+          exit 1
+        fi
+        echo "✅ Cloudflare secrets verified"
 
     - name: Deploy to Cloudflare Pages
+      id: deploy
       uses: cloudflare/pages-action@v1
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -34,3 +86,47 @@ jobs:
         projectName: 0-nkey
         directory: out
         gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+        wranglerVersion: '3'
+
+    - name: Deployment summary
+      run: |
+        echo "## 🚀 배포 완료" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "- **프로젝트**: 0-nkey" >> $GITHUB_STEP_SUMMARY
+        echo "- **브랜치**: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **커밋**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **배포 URL**: https://0-nkey.pages.dev" >> $GITHUB_STEP_SUMMARY
+        echo "- **배포 시간**: $(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
+
+  # PR 체크 (배포하지 않고 빌드만 확인)
+  pr-check:
+    runs-on: ubuntu-latest
+    name: PR Build Check
+    if: github.event_name == 'pull_request'
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run linter
+      run: npm run lint || true
+
+    - name: Build Next.js
+      run: npm run build
+      env:
+        NODE_ENV: production
+
+    - name: PR Build Summary
+      run: |
+        echo "## ✅ PR 빌드 체크 완료" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "빌드가 성공적으로 완료되었습니다. 머지 후 자동 배포됩니다." >> $GITHUB_STEP_SUMMARY
